# MeetingMind-AI

./: .gitignore  CHANGELOG.md  LICENSE  README.md
backend/: .env.example  README.md  conftest.py  manage.py  memurai-log.txt  pyproject.toml  pytest.ini  requirements-diarization.txt  requirements-stt.txt  requirements.txt
backend/apps/accounts/: admin.py  managers.py  models.py
backend/apps/accounts/api/: serializers.py  urls.py  views.py
backend/apps/agents/: apps.py  enums.py  models.py  prompts.py
backend/apps/agents/api/: urls.py  (+1 more)
backend/apps/benchmarks/: apps.py  enums.py  models.py  subscribers.py
backend/apps/common/: demo.py  demo_data.py  demo_media.py  demo_views.py  exceptions.py  health.py  managers.py  middleware.py  models.py  pagination.py  responses.py  storage.py  system_views.py
backend/apps/jobs/: admin.py  enums.py  events.py  manager.py  models.py  selectors.py  services.py  tasks.py
backend/apps/knowledge/: apps.py  models.py  prompts.py  selectors.py  subscribers.py
backend/apps/meetings/: admin.py  apps.py  enums.py  models.py  pipeline.py  subscribers.py
backend/apps/workspace/: admin.py  apps.py  enums.py  models.py  prompts.py  selectors.py  subscribers.py
backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/docs/: AI_ARCHITECTURE.md  API.md  ARCHITECTURE.md  CELERY_SETUP.md  DATABASE.md  DEPLOYMENT.md  FFMPEG_SETUP.md  LOCAL_DEVELOPMENT.md  OLLAMA_ACTIVATION.md  PERFORMANCE.md  PRODUCTION_READINESS.md  REDIS_SETUP.md  SECURITY.md  STT_ACTIVATION.md  TESTING.md
backend/scripts/: tts_synthesize.ps1
(+305 files in other folders)
